<resources>
    <string name="app_name">MonguerSpace</string>
    <string name="credits">CREDITS</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information</string>
    <string name="license_failed">License check failed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="highscore">High score</string>
    <string name="GAME_OVER">Game Over</string>
    <string name="play">PLAY</string>
    <string name="invulnerability">Invulnerable for 3\'!!!</string>
    <string name="shield">Shields</string>
    <string name="replay">Tap to play again!</string>
    <string name="last_points">Last Points:</string>
    <string name="monguer_space">MONGUER SPACE</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="points">Points</string>
    <string name="monguer_sub">An iMonguerApps Game</string>
    <string name="programming">PROGRAMMING</string>
    <string name="monguers">Francisco Férez Salinas\nSergio Penalva Marín\nMiguel Soto García</string>
    <string name="music">MUSIC</string>
    <string name="compositor">Juan Antonio Penalva Marín</string>
    <string name="thanks">THANKS FOR PLAYING!</string>
    <string name="instruct1">tap the screen to boost your spaceship</string>
    <string name="instruct2">boosting your spaceship will rise </string>
    <string name="instruct3">you\'ll get points faster if boosting</string>
    <string name="instruct4">crash with an asteroid removes a shield</string>
    <string name="instruct5">if you have no shield, crash will end the game</string>
    <string name="instruct6">when you lose a shield, you\'ll become invulnerable 3 secs</string>
    <string name="instruct7">sometimes you can pick up another shield</string>
    <string name="instruct8">you can earn points moving forward and</string>
    <string name="instruct9">dodging asteroids and picking up shields</string>
    <string name="more">tap the screen to continue</string>
    <string name="instruct10">tap \'back\' button to play</string>
    <string name="signin_other_error">Some error prevented to log in</string>
    <string name="signout">Cerrar sesión de Google</string>
    <string name="leaderboard">Marcadores</string>
    <string name="achievemnts">Logros</string>
    <string name="pause">pause</string>
    <string name="tap_to_continue">tap to continue</string>
    <string name="instruct12">tap \'back\' button to pause the game</string>
    <string name="instruct13">tap the screen to continue,</string>
    <string name="instruct14">or again \'back\' to leave</string>
</resources>

