<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.imonguer.monguerspace.CreditsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/monguer_space"
        android:id="@+id/companyCredits"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monguer_sub"
        android:id="@+id/textGameCredits"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_below="@+id/companyCredits"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/programming"
        android:id="@+id/programming"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textGameCredits"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monguers"
        android:id="@+id/monguers"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/programming"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/music"
        android:id="@+id/music"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/monguers"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/compositor"
        android:id="@+id/compositor"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/music"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thanks"
        android:id="@+id/thanks"
        android:textColor="#ffffff"
        android:layout_alignWithParentIfMissing="false"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="50dp"
        android:layout_below="@+id/compositor"
        android:layout_centerHorizontal="true" />
</RelativeLayout>